--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,60 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.lock-wscript
+.DS_Store
+
+# Logs
+logs
+*.log
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+.npm/
+
+# Firebase
+.firebase/
+firebase-debug.log
+firebase-debug.*.log
+
+# Environnement local
+.env
+.env.local
+.env.*.local
+
+# Output files (Vue)
+dist/
+public/
+
+# Vue CLI specific files
+.vuepress/dist
+.vuepress/.temp
+
+# Build files (Webpack / Parcel / Vite)
+build/
+output/
+.cache/
+.vite/
+*.html
+
+# IDEs and editors
 .vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS Files
+Thumbs.db
+.DS_Store
+Desktop.ini
+
+# Visual Studio Code
+.vscode/
+.history/
+*.code-workspace
