--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,23 @@
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.lock-wscript
 .DS_Store
+node_modules
+/dist
 
-# Logs
-logs
-*.log
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-.npm/
 
-# Firebase
-.firebase/
-firebase-debug.log
-firebase-debug.*.log
-
-# Environnement local
-.env
+# local env files
 .env.local
 .env.*.local
 
-# Output files (Vue)
-dist/
-public/
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Vue CLI specific files
-.vuepress/dist
-.vuepress/.temp
-
-# Build files (Webpack / Parcel / Vite)
-build/
-output/
-.cache/
-.vite/
-*.html
-
-# IDEs and editors
-.vscode/
-.idea/
+# Editor directories and files
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# OS Files
-Thumbs.db
-.DS_Store
-Desktop.ini
-
-# Visual Studio Code
-.vscode/
-.history/
-*.code-workspace
