--- a/code/package.json
+++ b/code/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^1.0.2",
     "core-js": "^3.8.3",
+    "firebase": "^11.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
