--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "test-project",
+  "name": "my-project",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "bulma": "^1.0.2",
     "core-js": "^3.8.3",
-    "firebase": "^11.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -34,12 +38,20 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": "off"
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "## Project setup\n\n``` npm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
+
