--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bulma": "^1.0.2",
     "firebase": "^11.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
