--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/vue": "^5.4.1",
     "bulma": "^1.0.2",
     "firebase": "^11.0.2",
     "pinia": "^2.2.6",
