--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Install dependencies
         run: npm install -g
 
+      - name: Add `node_modules/.bin` to PATH
+        run: |
+          echo "C:\\npm\\node_modules\\.bin" >> $GITHUB_PATH
+
       # Étape 4 : Build de l'application
       - name: Build the app
         run: npm run dev
