--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -27,7 +27,8 @@ jobs:
 
       # Étape 3 : Installation des dépendances
       - name: Install dependencies
-        run: npm install -g
+        run: npm install 
+        run: npm i
 
       - name: Add `node_modules/.bin` to PATH
         run: |
