--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -34,8 +34,8 @@ jobs:
           echo "C:\\npm\\node_modules\\.bin" >> $GITHUB_PATH
 
       # Étape 4 : Build de l'application
-      - name: Build the app
-        run: npm run dev
+      #- name: Build the app
+      #  run: npm run dev
 
       # Étape 5 : Installation de Cypress
       - name: Install Cypress
