--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -36,10 +36,10 @@ jobs:
       # Étape 4 : Build de l'application
       #- name: Build the app
       #  run: npm run dev
-
-      # Étape 5 : Installation de Cypress
-      - name: Install Cypress
-        run: npx cypress install
+      
+      #tests unitaires avec vitest
+       - name: Run unit tests with Vitest
+        run: npm run test:unit
 
       # Étape 6 : Démarrage de l'application
       - name: Start the application
