--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -3,11 +3,11 @@ name: CI/CD Pipeline for Vue.js with Cypress
 on:
   push:
     branches:
-      - dev #pr l'instant
+      - dev # pr l'instant
   pull_request:
     branches:
       - dev # pr l'instant
-  schedules:
+  schedule:
     - cron: '1 00 * * Mon,Tue,Wed,Thu,Fri'
       displayName: Daily 01:00 AM EDT Run
       branches:
@@ -38,6 +38,6 @@ jobs:
         run: |
           echo "C:\\npm\\node_modules\\.bin" >> $GITHUB_PATH
 
-      #tests unitaires avec vitest
+      # Tests unitaires avec Vitest
       - name: Run unit tests with Vitest
         run: npm run test:unit
