--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -8,11 +8,10 @@ on:
     branches:
       - dev # pr l'instant
   schedule:
+    - name: Daily 01:00 AM EDT Run
     - cron: '1 00 * * Mon,Tue,Wed,Thu,Fri'
-      displayName: Daily 01:00 AM EDT Run
       branches:
-        include:
-          - dev # pr l'instant
+        - dev # pr l'instant
       always: true
 
 jobs:
