--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -8,10 +8,9 @@ on:
     branches:
       - dev # pr l'instant
   schedule:
-    - name: Daily 01:00 AM EDT Run
-    - cron: '1 00 * * Mon,Tue,Wed,Thu,Fri'
+    - cron: '0 1 * * 1,2,3,4,5,6,7' # Exécution à 01:00 AM EDT du lundi au vendredi
       branches:
-        - dev # pr l'instant
+        - dev
       always: true
 
 jobs:
