--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@coreui/coreui": "^5.2.0",
     "@coreui/icons": "^3.0.1",
     "@coreui/vue": "^5.4.1",
+    "@google-cloud/storage": "^5.8.0",
     "bulma": "^1.0.2",
+    "cors": "^2.8.5",
     "firebase": "^11.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
@@ -44,7 +46,7 @@
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.8",
-    "typescript": "~5.6.3",
+    "typescript": "^5.7.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5",
     "vitest": "^2.1.5",
